# genreports

./: .dockerignore  .replit  Dockerfile  cleaning_report.py  excel-pdf-converter.json  main.py  pdf_converter.py  pest_report.py  pyproject.toml  replit.md  requirements.txt
