[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.5",
    "groupdocs-conversion-cloud>=26.4",
    "openpyxl>=3.1.5",
    "pillow>=12.3.0",
    "requests>=2.34.2",
    "waitress>=3.0.2",
]
